# finestra

./: AUTHORS  HACKING  NEWS  README  autogen.sh  configure.ac
.tx/: config
doc/: Makefile.am  code-overview.txt  finestra-theme.dtd  how-to-get-focus-right.txt  theme-format.txt
doc/creating_themes/: Makefile.am
doc/creating_themes/C/: index.docbook
doc/man/: Makefile.am  finestra-message.1  finestra-theme-viewer.1  finestra-window-demo.1  finestra.1
po/: ChangeLog  POTFILES.in  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_CO.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gnome-copyrights.txt  gu.po  ha.po  (+62 more)
src/: 50-finestra-desktop-key.xml.in  50-finestra-global-key.xml.in  50-finestra-window-key.xml.in  Makefile.am  finestra-wm.desktop.in  finestra.desktop.in  libfinestra-private.pc.in  org.gde2.finestra.gschema.xml
src/compositor/: compositor-xrender.c
src/core/: async-getprop.c  atomnames.h  bell.c  bell.h  boxes.c  constraints.c  constraints.h  core.c  delete.c  display-private.h  display.c  effects.c  errors.c  eventqueue.c  eventqueue.h  finestra-Xatomtype.h  frame-private.h  frame.c  group-private.h  group.c  group.h  iconcache.c  iconcache.h  keybindings.c  main.c  place.c  place.h  prefs.c  schema-bindings.c  screen-private.h  screen.c  session.c  stack.c  testasyncgetprop.c  testboxes.c  util.c  window-private.h  window.c  workspace.c  xprops.c
src/include/: all-keybindings.h  common.h  core.h  errors.h  main.h  prefs.h  resizepopup.h  tabpopup.h  ui.h  util.h  xprops.h
src/tools/: Makefile.am  finestra-message.c  finestra-window-demo.c
src/ui/: draw-workspace.c  draw-workspace.h  fixedtip.c  fixedtip.h  frames.c  frames.h  gradient.c  gradient.h  menu.c  menu.h  metaaccellabel.c  metaaccellabel.h  preview-widget.c  preview-widget.h  resizepopup.c  tabpopup.c  testgradient.c  theme-parser.c  theme-parser.h  theme-viewer.c  theme.c  theme.h  ui.c
src/wm-tester/: Makefile.am
