### This part of Makefile.am can be customized by you.

# yelp-tools:
@YELP_HELP_RULES@

# The name of the directory in /usr/share/gde2/help/, 
# and the name of the main .xml file:
HELP_ID = creating-finestra-themes

# The names of any files included via entity declarations.
HELP_FILES = index.docbook

# The names of any pictures:
HELP_MEDIA = 

# The names of any locales for which documentation translations exist:
HELP_LINGUAS =



